--- a/index.html
+++ b/index.html
@@ -155,9 +155,9 @@
 <body>
   <header>
     <video autoplay loop muted playsinline>
-      <source src="your_intro_video.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
+  <source src="https://bc9aba15-ae9e-48fc-a83f-6675ab5f5199-00-3uieuxvtmky2r.riker.replit.dev/videos/your_intro_video.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
     <div class="overlay-text">
       <h1>AI Power for Smart Farming</h1>
       <p>IOT TITENS – Made in Egypt 🇪🇬</p>
