--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 <body>
   <header>
     <video autoplay loop muted playsinline>
-  <source src="https://bc9aba15-ae9e-48fc-a83f-6675ab5f5199-00-3uieuxvtmky2r.riker.replit.dev/videos/your_intro_video.mp4" type="video/mp4">
+  <source src="https://replit.com/@iottitans156/Smart-farm#videos/iot%20video%202.m4v" type="video/mp4">
   Your browser does not support the video tag.
 </video>
     <div class="overlay-text">
