--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 <body>
   <header>
     <video autoplay loop muted playsinline>
-  <source src="https://replit.com/@iottitans156/Smart-farm#videos/iot%20video%202.m4v" type="video/mp4">
+  <source src="https://smartfarm-api.replit.app/uploads/videos/iot-video-2.m4v" type="video/mp4">
   Your browser does not support the video tag.
 </video>
     <div class="overlay-text">
