--- a/index.html
+++ b/index.html
@@ -154,9 +154,9 @@
 </head>
 <body>
   <header>
-    <video autoplay loop muted playsinline>
+    <video width="640" controls>
   <source src="https://smartfarm-api.replit.app/uploads/videos/iot-video-2.m4v" type="video/mp4">
-  Your browser does not support the video tag.
+  المتصفح لا يدعم تشغيل الفيديو.
 </video>
     <div class="overlay-text">
       <h1>AI Power for Smart Farming</h1>
