--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 <body>
   <header>
     <video width="640" controls>
-  <source src="https://smartfarm-api.replit.app/uploads/videos/iot-video-2.m4v" type="video/mp4">
+  <source src="https://smartfarm-api.replit.app/uploads/videos/iot.m4v" type="video/mp4">
   المتصفح لا يدعم تشغيل الفيديو.
 </video>
     <div class="overlay-text">
