--- a/index.html
+++ b/index.html
@@ -154,9 +154,9 @@
 </head>
 <body>
   <header>
-    <video width="640" controls>
-  <source src="https://smartfarm-api.replit.app/uploads/videos/iot.m4v" type="video/mp4">
-  المتصفح لا يدعم تشغيل الفيديو.
+    <video controls width="100%">
+  <source src="https://smartfarm-api.replit.app/uploads/videos/iot.m4v" type="video/mp4" />
+  متصفحك لا يدعم تشغيل الفيديو.
 </video>
     <div class="overlay-text">
       <h1>AI Power for Smart Farming</h1>
