--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
 </head>
 <body>
   <header>
-    <video controls width="100%">
-  <source src="https://smartfarm-api.replit.app/uploads/videos/iot.m4v" />
+    <video width="100%" height="auto" controls>
+  <source src="https://smartfarm-api.replit.app/uploads/videos/iot.m4v" type="video/x-m4v" />
   متصفحك لا يدعم تشغيل الفيديو.
 </video>
     <div class="overlay-text">
