--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 <body>
   <header>
     <video controls width="100%">
-  <source src="https://smartfarm-api.replit.app/uploads/videos/iot.m4v" type="video/mp4" />
+  <source src="https://smartfarm-api.replit.app/uploads/videos/iot.mp4" type="video/mp4" />
   Your browser does not support the video tag.
 </video>
     <div class="overlay-text">
