--- a/index.html
+++ b/index.html
@@ -167,36 +167,38 @@
   </header>
 
   <section class="dashboard" id="dashboard">
+   <div class="card">
+  <img src="https://img.icons8.com/ios/100/000000/plant-under-rain.png" alt="Soil">
+  <h3>Soil Moisture</h3>
+  <div class="progress-bar"><div class="progress" style="width: 0%;"></div></div>
+  <div class="value-label">Loading...</div>
+</div>
     <div class="card">
-      <img src="https://img.icons8.com/ios/100/000000/plant-under-rain.png" alt="Soil">
-      <h3>Soil Moisture</h3>
-      <div class="progress-bar"><div class="progress" style="width: 70%;"></div></div>
-      <div class="value-label">70%</div>
-    </div>
-    <div class="card">
-      <img src="https://img.icons8.com/ios/100/000000/temperature.png" alt="Temp">
-      <h3>Temperature</h3>
-      <div class="progress-bar"><div class="progress" style="width: 65%;"></div></div>
-      <div class="value-label">27°C</div>
-    </div>
-    <div class="card">
-      <img src="https://img.icons8.com/ios/100/000000/hygrometer.png" alt="Humidity">
-      <h3>Humidity</h3>
-      <div class="progress-bar"><div class="progress" style="width: 80%;"></div></div>
-      <div class="value-label">80%</div>
-    </div>
-    <div class="card">
-      <img src="https://img.icons8.com/ios/100/000000/sun--v1.png" alt="Light">
-      <h3>Light Level</h3>
-      <div class="progress-bar"><div class="progress" style="width: 90%;"></div></div>
-      <div class="value-label">900 Lux</div>
-    </div>
-    <div class="card">
-      <img src="https://img.icons8.com/ios/100/000000/rain.png" alt="Rain">
-      <h3>Rain Forecast</h3>
-      <div class="progress-bar"><div class="progress" style="width: 40%;"></div></div>
-      <div class="value-label">40% Chance</div>
-    </div>
+  <img src="https://img.icons8.com/ios/100/000000/temperature.png" alt="Temp">
+  <h3>Temperature</h3>
+  <div class="progress-bar"><div class="progress" style="width: 0%;"></div></div>
+  <div class="value-label">Loading...</div>
+</div>
+
+   <div class="card">
+  <img src="https://img.icons8.com/ios/100/000000/hygrometer.png" alt="Humidity">
+  <h3>Humidity</h3>
+  <div class="progress-bar"><div class="progress" style="width: 0%;"></div></div>
+  <div class="value-label">Loading...</div>
+</div>
+
+   <div class="card">
+  <img src="https://img.icons8.com/ios/100/000000/sun--v1.png" alt="Light">
+  <h3>Light Level</h3>
+  <div class="progress-bar"><div class="progress" style="width: 0%;"></div></div>
+  <div class="value-label">Loading...</div>
+</div>
+   <div class="card">
+  <img src="https://img.icons8.com/ios/100/000000/rain.png" alt="Rain">
+  <h3>Rain Forecast</h3>
+  <div class="progress-bar"><div class="progress" style="width: 0%;"></div></div>
+  <div class="value-label">Loading...</div>
+</div>
   </section>
 
   <script>
