--- a/index.html
+++ b/index.html
@@ -171,33 +171,33 @@
   <img src="https://img.icons8.com/ios/100/000000/plant-under-rain.png" alt="Soil">
   <h3>Soil Moisture</h3>
   <div class="progress-bar"><div class="progress" style="width: 0%;"></div></div>
-  <div class="value-label">Loading...</div>
+  <div class="value-label"></div>
 </div>
     <div class="card">
   <img src="https://img.icons8.com/ios/100/000000/temperature.png" alt="Temp">
   <h3>Temperature</h3>
   <div class="progress-bar"><div class="progress" style="width: 0%;"></div></div>
-  <div class="value-label">Loading...</div>
+  <div class="value-label"></div>
 </div>
 
    <div class="card">
   <img src="https://img.icons8.com/ios/100/000000/hygrometer.png" alt="Humidity">
   <h3>Humidity</h3>
   <div class="progress-bar"><div class="progress" style="width: 0%;"></div></div>
-  <div class="value-label">Loading...</div>
+  <div class="value-label"></div>
 </div>
 
    <div class="card">
   <img src="https://img.icons8.com/ios/100/000000/sun--v1.png" alt="Light">
   <h3>Light Level</h3>
   <div class="progress-bar"><div class="progress" style="width: 0%;"></div></div>
-  <div class="value-label">Loading...</div>
+  <div class="value-label"></div>
 </div>
    <div class="card">
   <img src="https://img.icons8.com/ios/100/000000/rain.png" alt="Rain">
   <h3>Rain Forecast</h3>
   <div class="progress-bar"><div class="progress" style="width: 0%;"></div></div>
-  <div class="value-label">Loading...</div>
+  <div class="value-label"></div>
 </div>
   </section>
 
