--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
   <script>
   async function fetchSensorData() {
     try {
-      const response = await fetch('https://your-backend-url/api/data'); // ← غيّر بالرابط الصحيح
+      const response = await fetch('https://smart-farm-backend.fares dergham.repl.co/api/sensors');
       const data = await response.json();
 
       const values = [
