--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
   <script>
   async function fetchSensorData() {
     try {
-      const response = await fetch('fetch('https://smart-farm.iottitans156.repl.co/api/sensors');
+      const response = await fetch('https://smart-farm.iottitans156.repl.co/api/sensors');
 ');
       const data = await response.json();
 
