--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 <body>
   <header>
     <video controls autoplay muted loop>
-      <source src="https://bc9aba15-ae9e-48fc-a83f-6675ab5f5199-00-3uieuxvtmky2r.riker.replit.dev/uploads/videos/iot.mp4" type="video/mp4" />
+      <source src="https://bc9aba15-ae9e-48fc-a83f-6675ab5f5199-00-3uieuxvtmky2r.riker.replt.dev/uploads/videos/iot.mp4" type="video/mp4" />
       Your browser does not support the video tag.
     </video>
     <div class="overlay-text">
@@ -167,73 +167,111 @@
   </header>
 
   <section class="dashboard" id="dashboard">
-   <div class="card">
-  <img src="https://img.icons8.com/ios/100/000000/plant-under-rain.png" alt="Soil">
-  <h3>Soil Moisture</h3>
-  <div class="progress-bar"><div class="progress" style="width: 0%;"></div></div>
-  <div class="value-label"></div>
-</div>
     <div class="card">
-  <img src="https://img.icons8.com/ios/100/000000/temperature.png" alt="Temp">
-  <h3>Temperature</h3>
-  <div class="progress-bar"><div class="progress" style="width: 0%;"></div></div>
-  <div class="value-label"></div>
-</div>
-
-   <div class="card">
-  <img src="https://img.icons8.com/ios/100/000000/hygrometer.png" alt="Humidity">
-  <h3>Humidity</h3>
-  <div class="progress-bar"><div class="progress" style="width: 0%;"></div></div>
-  <div class="value-label"></div>
-</div>
-
-   <div class="card">
-  <img src="https://img.icons8.com/ios/100/000000/sun--v1.png" alt="Light">
-  <h3>Light Level</h3>
-  <div class="progress-bar"><div class="progress" style="width: 0%;"></div></div>
-  <div class="value-label"></div>
-</div>
-   <div class="card">
-  <img src="https://img.icons8.com/ios/100/000000/rain.png" alt="Rain">
-  <h3>Rain Forecast</h3>
-  <div class="progress-bar"><div class="progress" style="width: 0%;"></div></div>
-  <div class="value-label"></div>
-</div>
+      <img src="https://img.icons8.com/ios/100/000000/plant-under-rain.png" alt="Soil">
+      <h3>Soil Moisture</h3>
+      <div class="progress-bar"><div class="progress" style="width: 0%;"></div></div>
+      <div class="value-label">Loading...</div>
+    </div>
+    <div class="card">
+      <img src="https://img.icons8.com/ios/100/000000/temperature.png" alt="Temp">
+      <h3>Temperature</h3>
+      <div class="progress-bar"><div class="progress" style="width: 0%;"></div></div>
+      <div class="value-label">Loading...</div>
+    </div>
+    <div class="card">
+      <img src="https://img.icons8.com/ios/100/000000/hygrometer.png" alt="Humidity">
+      <h3>Humidity</h3>
+      <div class="progress-bar"><div class="progress" style="width: 0%;"></div></div>
+      <div class="value-label">Loading...</div>
+    </div>
+    <div class="card">
+      <img src="https://img.icons8.com/ios/100/000000/sun--v1.png" alt="Light">
+      <h3>Light Level</h3>
+      <div class="progress-bar"><div class="progress" style="width: 0%;"></div></div>
+      <div class="value-label">Loading...</div>
+    </div>
+    <div class="card">
+      <img src="https://img.icons8.com/ios/100/000000/rain.png" alt="Rain">
+      <h3>Rain Forecast</h3>
+      <div class="progress-bar"><div class="progress" style="width: 0%;"></div></div>
+      <div class="value-label">Loading...</div>
+    </div>
   </section>
 
   <script>
-  async function fetchSensorData() {
-    try {
-      const response = await fetch('https://smart-farm.iottitans156.repl.co/api/sensors');
-');
-      const data = await response.json();
-
-      const values = [
-  { value: data.soil_moisture, unit: '%', max: 100 },
-  { value: data.temperature, unit: '°C', max: 50 },
-  { value: data.humidity, unit: '%', max: 100 },
-  { value: data.ldr, unit: 'Lux', max: 1000 },
-  { value: data.tds, unit: 'ppm', max: 2000 }
-];
-      document.querySelectorAll(".dashboard .card").forEach((card, i) => {
-        const progress = card.querySelector(".progress");
-        const label = card.querySelector(".value-label");
-
-        const percent = Math.min(100, (values[i].value / values[i].max) * 100);
-        progress.style.width = `${percent}%`;
-        label.textContent = `${values[i].value} ${values[i].unit}`;
-      });
-    } catch (err) {
-      console.error('Error fetching sensor data:', err);
+    // Toggle language (Arabic/English)
+    function toggleLang() {
+      const langButton = document.querySelector('.lang-toggle');
+      const isArabic = langButton.textContent === 'عربي';
+      document.querySelector('html').lang = isArabic ? 'ar' : 'en';
+      document.querySelector('.overlay-text h1').textContent = isArabic ? 'قوة الذكاء الاصطناعي للزراعة الذكية' : 'AI Power for Smart Farming';
+      document.querySelector('.overlay-text p').textContent = isArabic ? 'IOT TITENS - صنع في مصر 🇪🇬' : 'IOT TITENS – Made in Egypt 🇪🇬';
+      document.querySelectorAll('.card h3')[0].textContent = isArabic ? 'رطوبة التربة' : 'Soil Moisture';
+      document.querySelectorAll('.card h3')[1].textContent = isArabic ? 'درجة الحرارة' : 'Temperature';
+      document.querySelectorAll('.card h3')[2].textContent = isArabic ? 'الرطوبة' : 'Humidity';
+      document.querySelectorAll('.card h3')[3].textContent = isArabic ? 'مستوى الضوء' : 'Light Level';
+      document.querySelectorAll('.card h3')[4].textContent = isArabic ? 'توقعات الأمطار' : 'Rain Forecast';
+      langButton.textContent = isArabic ? 'English' : 'عربي';
     }
-  }
 
-  // أول مرة عند التحميل
-  fetchSensorData();
+    // Toggle light/dark mode
+    function toggleMode() {
+      document.body.classList.toggle('light-mode');
+      const modeButton = document.querySelector('.mode-toggle');
+      modeButton.textContent = document.body.classList.contains('light-mode') ? '🌞' : '🌙';
+    }
 
-  // تحديث كل 10 ثواني
-  setInterval(fetchSensorData, 10000);
-</script>
+    async function fetchSensorData() {
+      try {
+        const response = await fetch('https://smart-farm.iottitans156.repl.co/api/sensors', {
+          method: 'GET',
+          headers: {
+            'Content-Type': 'application/json',
+            'Accept': 'application/json'
+          }
+        });
 
+        if (!response.ok) {
+          throw new Error(`HTTP error! status: ${response.status}`);
+        }
+
+        const data = await response.json();
+
+        // Validate data
+        const sensorData = [
+          { value: Number(data.soil_moisture) || 0, unit: '%', max: 100, label: 'Soil Moisture' },
+          { value: Number(data.temperature) || 0, unit: '°C', max: 50, label: 'Temperature' },
+          { value: Number(data.humidity) || 0, unit: '%', max: 100, label: 'Humidity' },
+          { value: Number(data.ldr) || 0, unit: 'Lux', max: 1000, label: 'Light Level' },
+          { value: Number(data.tds) || 0, unit: 'ppm', max: 2000, label: 'Rain Forecast' }
+        ];
+
+        document.querySelectorAll('.dashboard .card').forEach((card, i) => {
+          const progress = card.querySelector('.progress');
+          const label = card.querySelector('.value-label');
+          const value = sensorData[i].value;
+          const max = sensorData[i].max;
+          const unit = sensorData[i].unit;
+
+          // Calculate percentage and ensure it stays within 0-100%
+          const percent = Math.min(100, Math.max(0, (value / max) * 100));
+          progress.style.width = `${percent}%`;
+          label.textContent = isNaN(value) ? 'No Data' : `${value.toFixed(1)} ${unit}`;
+        });
+      } catch (err) {
+        console.error('Error fetching sensor data:', err);
+        document.querySelectorAll('.dashboard .card .value-label').forEach(label => {
+          label.textContent = 'Error';
+        });
+      }
+    }
+
+    // Fetch data initially
+    fetchSensorData();
+
+    // Update every 10 seconds
+    setInterval(fetchSensorData, 10000);
+  </script>
 </body>
 </html>
