--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 <body>
   <header>
     <video controls autoplay muted loop>
-      <source src="https://bc9aba15-ae9e-48fc-a83f-6675ab5f5199-00-3uieuxvtmky2r.riker.replt.dev/uploads/videos/iot.mp4" type="video/mp4" />
+      <source src="https://bc9aba15-ae9e-48fc-a83f-6675ab5f5199-00-3uieuxvtmky2r.riker.replit.dev/uploads/videos/iot.mp4" type="video/mp4" />
       Your browser does not support the video tag.
     </video>
     <div class="overlay-text">
