--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
     async function fetchSensorData() {
       try {
-        const response = await fetch('https://smart-farm.iottitans156.repl.co/api/sensors', {
+        const response = await fetch('https://replit.com/@iottitans156/Smart-farm#firebasekey.json', {
           method: 'GET',
           headers: {
             'Content-Type': 'application/json',
