--- a/index.html
+++ b/index.html
@@ -224,13 +224,13 @@
 
     async function fetchSensorData() {
       try {
-        const response = await fetch('https://replit.com/@iottitans156/Smart-farm#firebasekey.json', {
-          method: 'GET',
-          headers: {
-            'Content-Type': 'application/json',
-            'Accept': 'application/json'
-          }
-        });
+        const response = await fetch('https://smart-farm-iotttitans156.repl.co/api/sensors', {
+  method: 'GET',
+  headers: {
+    'Content-Type': 'application/json',
+    'Accept': 'application/json'
+  }
+});
 
         if (!response.ok) {
           throw new Error(`HTTP error! status: ${response.status}`);
