--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
     async function fetchSensorData() {
       try {
-        const response = await fetch('https://smart-farm-iotttitans156.repl.co/api/sensors', {
+        const response = await fetch('https://bc9aba15-ae9e-48fc-a83f-6675ab5f5199-00-3uieuxvtmky2r.riker.replit.dev/api/sensors', {
   method: 'GET',
   headers: {
     'Content-Type': 'application/json',
