--- a/index.html
+++ b/index.html
@@ -223,15 +223,178 @@
     }
 
     async function fetchSensorData() {
-      try {
-        const response = await fetch('https://bc9aba15-ae9e-48fc-a83f-6675ab5f5199-00-3uieuxvtmky2r.riker.replit.dev/api/sensors', {
-  method: 'GET',
-  headers: {
-    'Content-Type': 'application/json',
-    'Accept': 'application/json'
-  }
-});
+  try {
+    const response = await fetch('https://bc9aba15-ae9e-48fc-a83f-6675ab5f5199-00-3uieuxvtmky2r.riker.replit.dev/api/sensors', {
+      method: 'GET',
+      headers: {
+        'Content-Type': 'application/json',
+        'Accept': 'application/json'
+      }
+    });
 
+    if (!response.ok) {
+      throw new Error(`HTTP error! status: ${response.status}`);
+    }
+
+    const data = await response.json();
+
+    // Validate data
+    const sensorData = [
+      { value: Number(data.soil_moisture) || 0, unit: '%', max: 100, label: 'Soil Moisture' },
+      { value: Number(data.temperature) || 0, unit: '°C', max: 50, label: 'Temperature' },
+      { value: Number(data.humidity) || 0, unit: '%', max: 100, label: 'Humidity' },
+      { value: Number(data.ldr) || 0, unit: 'Lux', max: 1000, label: 'Light Level' },
+      { value: Number(data.tds) || 0, unit: 'ppm', max: 2000, label: 'Rain Forecast' }
+    ];
+
+    document.querySelectorAll('.dashboard .card').forEach((card, i) => {
+      const progress = card.querySelector('.progress');
+      const label = card.querySelector('.value-label');
+      const value = sensorData[i].value;
+      const max = sensorData[i].max;
+      const unit = sensorData[i].unit;
+
+      // Calculate percentage and ensure it stays within 0-100%
+      const percent = Math.min(100, Math.max(0, (value / max) * 100));
+      progress.style.width = `${percent}%`;
+      label.textContent = isNaN(value) ? 'No Data' : `${value.toFixed(1)} ${unit}`;
+    });
+  } catch (err) {
+    console.error('Error fetching sensor data:', err);
+    document.querySelectorAll('.dashboard .card .value-label').forEach(label => {
+      label.textContent = 'Error';
+    });
+  }
+}async function fetchSensorData() {
+  try {
+    const response = await fetch('https://bc9aba15-ae9e-48fc-a83f-6675ab5f5199-00-3uieuxvtmky2r.riker.replit.dev/api/sensors', {
+      method: 'GET',
+      headers: {
+        'Content-Type': 'application/json',
+        'Accept': 'application/json'
+      }
+    });
+
+    if (!response.ok) {
+      throw new Error(`HTTP error! status: ${response.status}`);
+    }
+
+    const data = await response.json();
+
+    // Validate data
+    const sensorData = [
+      { value: Number(data.soil_moisture) || 0, unit: '%', max: 100, label: 'Soil Moisture' },
+      { value: Number(data.temperature) || 0, unit: '°C', max: 50, label: 'Temperature' },
+      { value: Number(data.humidity) || 0, unit: '%', max: 100, label: 'Humidity' },
+      { value: Number(data.ldr) || 0, unit: 'Lux', max: 1000, label: 'Light Level' },
+      { value: Number(data.tds) || 0, unit: 'ppm', max: 2000, label: 'Rain Forecast' }
+    ];
+
+    document.querySelectorAll('.dashboard .card').forEach((card, i) => {
+      const progress = card.querySelector('.progress');
+      const label = card.querySelector('.value-label');
+      const value = sensorData[i].value;
+      const max = sensorData[i].max;
+      const unit = sensorData[i].unit;
+
+      // Calculate percentage and ensure it stays within 0-100%
+      const percent = Math.min(100, Math.max(0, (value / max) * 100));
+      progress.style.width = `${percent}%`;
+      label.textContent = isNaN(value) ? 'No Data' : `${value.toFixed(1)} ${unit}`;
+    });
+  } catch (err) {
+    console.error('Error fetching sensor data:', err);
+    document.querySelectorAll('.dashboard .card .value-label').forEach(label => {
+      label.textContent = 'Error';
+    });
+  }
+}async function fetchSensorData() {
+  try {
+    const response = await fetch('https://bc9aba15-ae9e-48fc-a83f-6675ab5f5199-00-3uieuxvtmky2r.riker.replit.dev/api/sensors', {
+      method: 'GET',
+      headers: {
+        'Content-Type': 'application/json',
+        'Accept': 'application/json'
+      }
+    });
+
+    if (!response.ok) {
+      throw new Error(`HTTP error! status: ${response.status}`);
+    }
+
+    const data = await response.json();
+
+    // Validate data
+    const sensorData = [
+      { value: Number(data.soil_moisture) || 0, unit: '%', max: 100, label: 'Soil Moisture' },
+      { value: Number(data.temperature) || 0, unit: '°C', max: 50, label: 'Temperature' },
+      { value: Number(data.humidity) || 0, unit: '%', max: 100, label: 'Humidity' },
+      { value: Number(data.ldr) || 0, unit: 'Lux', max: 1000, label: 'Light Level' },
+      { value: Number(data.tds) || 0, unit: 'ppm', max: 2000, label: 'Rain Forecast' }
+    ];
+
+    document.querySelectorAll('.dashboard .card').forEach((card, i) => {
+      const progress = card.querySelector('.progress');
+      const label = card.querySelector('.value-label');
+      const value = sensorData[i].value;
+      const max = sensorData[i].max;
+      const unit = sensorData[i].unit;
+
+      // Calculate percentage and ensure it stays within 0-100%
+      const percent = Math.min(100, Math.max(0, (value / max) * 100));
+      progress.style.width = `${percent}%`;
+      label.textContent = isNaN(value) ? 'No Data' : `${value.toFixed(1)} ${unit}`;
+    });
+  } catch (err) {
+    console.error('Error fetching sensor data:', err);
+    document.querySelectorAll('.dashboard .card .value-label').forEach(label => {
+      label.textContent = 'Error';
+    });
+  }
+}async function fetchSensorData() {
+  try {
+    const response = await fetch('https://bc9aba15-ae9e-48fc-a83f-6675ab5f5199-00-3uieuxvtmky2r.riker.replit.dev/api/sensors', {
+      method: 'GET',
+      headers: {
+        'Content-Type': 'application/json',
+        'Accept': 'application/json'
+      }
+    });
+
+    if (!response.ok) {
+      throw new Error(`HTTP error! status: ${response.status}`);
+    }
+
+    const data = await response.json();
+
+    // Validate data
+    const sensorData = [
+      { value: Number(data.soil_moisture) || 0, unit: '%', max: 100, label: 'Soil Moisture' },
+      { value: Number(data.temperature) || 0, unit: '°C', max: 50, label: 'Temperature' },
+      { value: Number(data.humidity) || 0, unit: '%', max: 100, label: 'Humidity' },
+      { value: Number(data.ldr) || 0, unit: 'Lux', max: 1000, label: 'Light Level' },
+      { value: Number(data.tds) || 0, unit: 'ppm', max: 2000, label: 'Rain Forecast' }
+    ];
+
+    document.querySelectorAll('.dashboard .card').forEach((card, i) => {
+      const progress = card.querySelector('.progress');
+      const label = card.querySelector('.value-label');
+      const value = sensorData[i].value;
+      const max = sensorData[i].max;
+      const unit = sensorData[i].unit;
+
+      // Calculate percentage and ensure it stays within 0-100%
+      const percent = Math.min(100, Math.max(0, (value / max) * 100));
+      progress.style.width = `${percent}%`;
+      label.textContent = isNaN(value) ? 'No Data' : `${value.toFixed(1)} ${unit}`;
+    });
+  } catch (err) {
+    console.error('Error fetching sensor data:', err);
+    document.querySelectorAll('.dashboard .card .value-label').forEach(label => {
+      label.textContent = 'Error';
+    });
+  }
+}
         if (!response.ok) {
           throw new Error(`HTTP error! status: ${response.status}`);
         }
