--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
     <div class="container">
         <div class="header">
             <h1>🌱 نظام المزرعة الذكية</h1>
-            <p>مراقبة والتحكم في نظام الري الذكي</p>
+            <p>المراقبة والتحكم في نظام الري الذكي</p>
         </div>
         
         <div class="dashboard">
