--- a/index.html
+++ b/index.html
@@ -280,7 +280,15 @@
                 </div>
                 <div class="last-updated">آخر تحديث: <span id="moistureTime">الآن</span></div>
             </div>
-            
+            <div class="dashboard">
+            <div class="sensor-card">
+                <h3><span class="emoji">💧</span>نسبه الملوحه</h3>
+                <div class="sensor-value soil-moisture" id="moistureValue">--%</div>
+                <div class="progress-bar">
+                    <div class="progress-fill" id="moistureProgress" style="width: --%"></div>
+                </div>
+                <div class="last-updated">آخر تحديث: <span id="moistureTime">الآن</span></div>
+            </div>
             <div class="sensor-card">
                 <h3><span class="emoji">🌡️</span>درجة الحرارة</h3>
                 <div class="sensor-value temperature" id="tempValue">--%°C</div>
