--- a/index.html
+++ b/index.html
@@ -291,7 +291,17 @@
                 <div class="sensor-value humidity" id="humidityValue">--%</div>
                 <div class="last-updated">آخر تحديث: <span id="humidityTime">الآن</span></div>
             </div>
-            
+            <div class="sensor-card">
+    <h3><span class="emoji">🧂</span>ملوحة المياه (TDS)</h3>
+    <div class="sensor-value" style="color: #f39c12;" id="tdsValue">-- ppm</div>
+    <div class="last-updated">آخر تحديث: <span id="tdsTime">الآن</span></div>
+</div>
+<div class="sensor-card">
+    <h3><span class="emoji">🚶</span>الكشف عن الحركة</h3>
+    <div class="sensor-value" style="color: #16a085;" id="motionValue">--</div>
+    <div class="last-updated">آخر تحديث: <span id="motionTime">الآن</span></div>
+</div>
+
             <div class="sensor-card">
                 <h3><span class="emoji">⚡</span>حالة المضخة</h3>
                 <div class="sensor-value pump-status">
