--- a/index.html
+++ b/index.html
@@ -296,6 +296,13 @@
     <div class="sensor-value" style="color: #f39c12;" id="tdsValue">-- ppm</div>
     <div class="last-updated">آخر تحديث: <span id="tdsTime">الآن</span></div>
 </div>
+            <!-- كارت شدة الإضاءة -->
+<div class="sensor-card">
+    <h3><span class="emoji">💡</span>شدة الإضاءة</h3>
+    <div class="sensor-value" style="color: #3498db;" id="lightValue">--</div>
+    <div class="last-updated">آخر تحديث: <span id="lightTime">الآن</span></div>
+</div>
+
 <div class="sensor-card">
     <h3><span class="emoji">🚶</span>الكشف عن الحركة</h3>
     <div class="sensor-value" style="color: #16a085;" id="motionValue">--</div>
