--- a/index.html
+++ b/index.html
@@ -309,14 +309,12 @@
     <div class="last-updated">آخر تحديث: <span id="motionTime">الآن</span></div>
 </div>
 
-            <div class="sensor-card">
-                <h3><span class="emoji">⚡</span>حالة المضخة</h3>
-                <div class="sensor-value pump-status">
-                    <span class="status-indicator %s" id="statusIndicator"></span>
-                    <span id="pumpStatus">%s</span>
-                </div>
-                <div class="last-updated">آخر تحديث: <span id="statusTime">الآن</span></div>
-            </div>
+            <div class="sensor-card pump-card">
+  <h3><span class="emoji">🚰</span>حالة المضخة</h3>
+  <div class="center-status" id="pumpStatus">--</div>
+  <div class="last-updated">آخر تحديث: <span id="statusTime">الآن</span></div>
+</div>
+
             
             <div class="control-panel">
                 <h3>🎮 لوحة التحكم</h3>
