--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
         document.getElementById("motionValue").textContent = val ? "تم الكشف عن حركة" : "لا توجد حركة";
         document.getElementById("motionTime").textContent = new Date().toLocaleTimeString("ar-EG");
     }
-   function updateTemperature(val) {
+   function updatetemperature(val) {
     const tempEl = document.getElementById('tempValue');
     const timeEl = document.getElementById('tempTime');
 
